--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.42.3",
+    "react-native-image-picker": "^0.26.2",
     "react-native-tesseract-ocr": "^1.0.8"
   },
   "devDependencies": {
